{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 18,
  "lineage": "8e78267e-df0b-2e8b-6061-5ac30016d281",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:network-acl/acl-0aa67461da9e19d8a",
            "default_network_acl_id": "acl-0aa67461da9e19d8a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aa67461da9e19d8a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "008971642321",
            "subnet_ids": [
              "subnet-0638cbc61c09c0fa4",
              "subnet-06881aaf2567def9e",
              "subnet-06b47e94839970958"
            ],
            "tags": {
              "Name": "example-vpc-default"
            },
            "tags_all": {
              "Name": "example-vpc-default"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:route-table/rtb-0f1c8211ee6b4aa27",
            "default_route_table_id": "rtb-0f1c8211ee6b4aa27",
            "id": "rtb-0f1c8211ee6b4aa27",
            "owner_id": "008971642321",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "example-vpc-default"
            },
            "tags_all": {
              "Name": "example-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:security-group/sg-0da132446029eab30",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0da132446029eab30",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "008971642321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-vpc-default"
            },
            "tags_all": {
              "Name": "example-vpc-default"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:internet-gateway/igw-073420a18e563e6f8",
            "id": "igw-073420a18e563e6f8",
            "owner_id": "008971642321",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-073420a18e563e6f8",
            "id": "r-rtb-099910a4a06c1b2471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099910a4a06c1b247",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:route-table/rtb-028a4a81201f87f13",
            "id": "rtb-028a4a81201f87f13",
            "owner_id": "008971642321",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "example-vpc-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:route-table/rtb-07556696eab6227ba",
            "id": "rtb-07556696eab6227ba",
            "owner_id": "008971642321",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "example-vpc-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:route-table/rtb-099910a4a06c1b247",
            "id": "rtb-099910a4a06c1b247",
            "owner_id": "008971642321",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-vpc-public"
            },
            "tags_all": {
              "Name": "example-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00415353e112edaf6",
            "route_table_id": "rtb-028a4a81201f87f13",
            "subnet_id": "subnet-0638cbc61c09c0fa4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f81e0bc454f21e0",
            "route_table_id": "rtb-07556696eab6227ba",
            "subnet_id": "subnet-06881aaf2567def9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd716929da22f99",
            "route_table_id": "rtb-099910a4a06c1b247",
            "subnet_id": "subnet-06b47e94839970958"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:subnet/subnet-0638cbc61c09c0fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0638cbc61c09c0fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008971642321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "example-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:subnet/subnet-06881aaf2567def9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06881aaf2567def9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008971642321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "example-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:subnet/subnet-06b47e94839970958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b47e94839970958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008971642321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "example-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-05f21faa46ab459e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:008971642321:vpc/vpc-05f21faa46ab459e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa67461da9e19d8a",
            "default_route_table_id": "rtb-0f1c8211ee6b4aa27",
            "default_security_group_id": "sg-0da132446029eab30",
            "dhcp_options_id": "dopt-00d39dc2f726fb71e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f21faa46ab459e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1c8211ee6b4aa27",
            "owner_id": "008971642321",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}